# clutterlog

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
media/: clutterlog-example.webm
src/: main.rs
src/site/: media_library.rs  mod.rs  website.rs  website_info.rs  website_item.rs  website_media.rs
src/website/: media_library.rs  mod.rs  website.rs  website_item.rs
template/: github_action.yaml  index.html  rss.xml
template/public/: clutterlog.js  style.css
