[package]
name = "clutterlog"
version = "0.1.0"
edition = "2024"
description = "An uncurated timeline of unfinished projects"
authors = [ "Bruno Croci <bruno@croci.me>" ]
rust-version = "1.90"
include = ["src/**/*", "template/**/*", "Cargo.toml", "Cargo.lock", "README.md"]
repository = "https://github.com/CrociDB/clutterlog"
readme = "README.md"
homepage = "https://github.com/CrociDB/clutterlog"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
